syntax = "proto3";
package verstakgit.battleship.battleship;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/verstakgit/battleship/x/battleship/types";

// Msg defines the Msg service.
service Msg {
      rpc CreateGame(MsgCreateGame) returns (MsgCreateGameResponse);
  rpc SetField(MsgSetField) returns (MsgSetFieldResponse);
  rpc Fire(MsgFire) returns (MsgFireResponse);
  rpc ActiveGames(MsgActiveGames) returns (MsgActiveGamesResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateGame {
  string creator = 1;
  string opponent = 2;
}

message MsgCreateGameResponse {
  string idVal = 1;
}

message MsgSetField {
  string creator = 1;
  string idVal = 2;
  string field = 3;
}

message MsgSetFieldResponse {
}

message MsgFire {
  string creator = 1;
  int64 x = 2;
  int64 y = 3;
  string gameId = 4;
}

message MsgFireResponse {
  string status = 1;
  bool win = 2;
  string opponentField = 3;
}

message MsgActiveGames {
  string creator = 1;
}

message MsgActiveGamesResponse {
  repeated Game games = 1;
}

message Game {
  string playerA = 1;
  string playerB = 2;
  string fieldA = 3;
  string fieldB = 4;
  string turn = 5;
}


// this line is used by starport scaffolding # proto/tx/message